package core;

public interface Cards {

	public String getCardType();
	public void setUser(User user);
	public int visit(ElectricalBicycle bike);
	public int visit(MechanicalBicycle bike);
}
