package core;

public interface Cost {

	public int getCost(int minutes,User user);
	
}
